# clone

./: .gitignore  CMakeLists copy.txt  CMakeLists.txt  README.md  apply_fixes.ps1  build.ps1  driver_compilation_fix.patch  gen.go  gen_test.go  generate_patch.ps1  go.mod  go.sum
.github/workflows/: build.yml  clone.yml
